--- a/pocket-buddha/app/build.gradle
+++ b/pocket-buddha/app/build.gradle
@@ -1,26 +1,44 @@
 apply plugin: 'com.android.application'
 
-android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+def FEED_PAGER_END_POINT = FEED_PAGER_END_POINT
+def LIST_SEARCH_END_POINT = LIST_SEARCH_END_POINT
+def TEXT_SEARCH_END_POINT = TEXT_SEARCH_END_POINT
+def POCKET_BUDDHA_API_KEY = POCKET_BUDDHA_API_KEY
 
-    defaultConfig {
-        applicationId "net.usrlib.pocketbuddha"
-        minSdkVersion 15
-        targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
+android {
+	compileSdkVersion 23
+	buildToolsVersion "23.0.3"
+
+	defaultConfig {
+		applicationId "net.usrlib.pocketbuddha"
+		minSdkVersion 15
+		targetSdkVersion 23
+		versionCode 1
+		versionName "1.0"
+		buildConfigField "String", "FEED_PAGER_END_POINT", FEED_PAGER_END_POINT
+		buildConfigField "String", "LIST_SEARCH_END_POINT", LIST_SEARCH_END_POINT
+		buildConfigField "String", "TEXT_SEARCH_END_POINT", TEXT_SEARCH_END_POINT
+		buildConfigField "String", "POCKET_BUDDHA_API_KEY", POCKET_BUDDHA_API_KEY
+	}
+
+	buildTypes {
+		release {
+			minifyEnabled false
+			proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+		}
+	}
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
+	compile fileTree(dir: 'libs', include: ['*.jar'])
+	testCompile 'junit:junit:4.12'
+	compile 'com.android.support:appcompat-v7:23.4.0'
+	compile 'com.android.support:design:23.4.0'
+	compile 'com.android.support:cardview-v7:23.4.0'
+	compile 'com.android.support:recyclerview-v7:23.4.0'
+	compile 'com.android.support:palette-v7:23.4.0'
+	compile 'net.usrlib:material-color:0.2'
+	compile 'com.github.bumptech.glide:glide:3.7.0'
+	compile 'com.github.clans:fab:1.6.3'
+	compile 'com.chauthai.swipereveallayout:swipe-reveal-layout:1.2.0'
 }
