--- a/pocket-buddha/app/src/main/AndroidManifest.xml
+++ b/pocket-buddha/app/src/main/AndroidManifest.xml
@@ -11,13 +11,16 @@
 		android:label="@string/app_name"
 		android:supportsRtl="true"
 		android:theme="@style/AppTheme">
-		<activity android:name=".MainActivity">
+		<activity
+			android:name=".ui.SplashScreenActivity"
+			android:label="@string/app_name"
+			android:theme="@style/AppTheme.NoActionBar">
 			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
+				<action android:name="android.intent.action.MAIN"/>
 
-				<category android:name="android.intent.category.LAUNCHER" />
+				<category android:name="android.intent.category.LAUNCHER"/>
 			</intent-filter>
 		</activity>
+		<service android:name=".service.FeedService"/>
 	</application>
-
 </manifest>
