--- a/pocket-buddha/app/src/main/AndroidManifest.xml
+++ b/pocket-buddha/app/src/main/AndroidManifest.xml
@@ -11,8 +11,9 @@
 		android:label="@string/app_name"
 		android:supportsRtl="true"
 		android:theme="@style/AppTheme">
+
 		<activity
-			android:name=".ui.SplashScreenActivity"
+			android:name=".view.SplashScreenActivity"
 			android:label="@string/app_name"
 			android:theme="@style/AppTheme.NoActionBar">
 			<intent-filter>
@@ -21,6 +22,19 @@
 				<category android:name="android.intent.category.LAUNCHER"/>
 			</intent-filter>
 		</activity>
+
+		<activity
+			android:name=".view.HomeActivity"
+			android:label="@string/app_name"
+			android:launchMode="singleTop"
+			android:theme="@style/AppTheme.NoActionBar">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN"/>
+				<category android:name="android.intent.category.INFO"/>
+			</intent-filter>
+		</activity>
+
 		<service android:name=".service.FeedService"/>
+
 	</application>
 </manifest>
