--- a/pocket-buddha/app/src/main/AndroidManifest.xml
+++ b/pocket-buddha/app/src/main/AndroidManifest.xml
@@ -12,10 +12,15 @@
 		android:supportsRtl="true"
 		android:theme="@style/AppTheme">
 
+		<meta-data
+			android:name="com.google.android.gms.version"
+			android:value="@integer/google_play_services_version" />
+
 		<activity
 			android:name=".view.SplashScreenActivity"
 			android:label="@string/app_name"
-			android:theme="@style/AppTheme.NoActionBar">
+			android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
 
@@ -34,7 +39,51 @@
 			</intent-filter>
 		</activity>
 
+		<activity
+			android:name=".view.AboutActivity"
+			android:label="@string/activity_about"
+			android:launchMode="singleTop"
+			android:theme="@style/AppTheme.NoActionBar">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN"/>
+				<category android:name="android.intent.category.INFO"/>
+			</intent-filter>
+		</activity>
+
+		<activity
+			android:name=".view.DetailActivity"
+			android:label="@string/app_name"
+			android:launchMode="singleTop"
+			android:theme="@style/AppTheme.NoActionBar">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN"/>
+				<category android:name="android.intent.category.INFO"/>
+			</intent-filter>
+		</activity>
+
+		<activity
+			android:name=".view.SearchResultActivity"
+			android:parentActivityName=".view.HomeActivity"
+			android:label="@string/activity_search_results"
+			android:theme="@style/AppTheme.NoActionBar">
+			<intent-filter>
+				<action android:name="android.intent.action.SEARCH"/>
+			</intent-filter>
+			<meta-data
+				android:name="android.app.searchable"
+				android:resource="@xml/searchable"/>
+		</activity>
+
 		<service android:name=".service.FeedService"/>
 
+		<provider
+			android:authorities="net.usrlib.pocketbuddha.provider"
+			android:name=".provider.FeedProvider"
+			android:exported="false"/>
+		<provider
+			android:authorities="net.usrlib.pocketbuddha.provider.search"
+			android:name=".provider.SearchProvider"
+			android:enabled="true"
+			android:exported="true"/>
 	</application>
 </manifest>
