--- a/pocket-buddha/app/build.gradle
+++ b/pocket-buddha/app/build.gradle
@@ -41,5 +41,5 @@ dependencies {
 	compile 'com.github.bumptech.glide:glide:3.7.0'
 	compile 'com.github.clans:fab:1.6.3'
 	compile 'com.chauthai.swipereveallayout:swipe-reveal-layout:1.2.0'
-	compile 'com.google.firebase:firebase-ads:9.0.2'
+	//compile 'com.google.firebase:firebase-ads:9.0.2'
 }
