--- a/pocket-buddha/app/src/main/AndroidManifest.xml
+++ b/pocket-buddha/app/src/main/AndroidManifest.xml
@@ -12,15 +12,15 @@
 		android:supportsRtl="true"
 		android:theme="@style/AppTheme">
 
-		<meta-data
-			android:name="com.google.android.gms.version"
-			android:value="@integer/google_play_services_version" />
+		<!--<meta-data-->
+			<!--android:name="com.google.android.gms.version"-->
+			<!--android:value="@integer/google_play_services_version" />-->
 
 		<activity
 			android:name=".view.SplashScreenActivity"
 			android:label="@string/app_name"
 			android:theme="@style/AppTheme.NoActionBar"
-            android:screenOrientation="portrait">
+			android:screenOrientation="portrait">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
 
@@ -52,6 +52,17 @@
 
 		<activity
 			android:name=".view.DetailActivity"
+			android:label="@string/app_name"
+			android:launchMode="singleTop"
+			android:theme="@style/AppTheme.NoActionBar">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN"/>
+				<category android:name="android.intent.category.INFO"/>
+			</intent-filter>
+		</activity>
+
+		<activity
+			android:name=".view.StarredActivity"
 			android:label="@string/app_name"
 			android:launchMode="singleTop"
 			android:theme="@style/AppTheme.NoActionBar">
