--- a/pocket-buddha/app/src/main/AndroidManifest.xml
+++ b/pocket-buddha/app/src/main/AndroidManifest.xml
@@ -62,8 +62,8 @@
 		</activity>
 
 		<activity
-			android:name=".view.StarredActivity"
-			android:label="@string/app_name"
+			android:name=".view.FavoritesActivity"
+			android:label="@string/activity_favorites"
 			android:launchMode="singleTop"
 			android:theme="@style/AppTheme.NoActionBar">
 			<intent-filter>
