--- a/pocket-buddha/app/src/main/AndroidManifest.xml
+++ b/pocket-buddha/app/src/main/AndroidManifest.xml
@@ -99,7 +99,23 @@
 		<provider
 			android:authorities="net.usrlib.pocketbuddha.provider.search"
 			android:name=".provider.SearchProvider"
-			android:enabled="true"
-			android:exported="true"/>
+			android:exported="false"/>
+
+		<provider
+			android:authorities="net.usrlib.pocketbuddha.provider.word"
+			android:name=".provider.WordProvider"
+			android:exported="false"/>
+
+		<receiver
+			android:name=".widget.DailyWidgetProvider"
+			android:label="@string/widget_title">
+			<intent-filter>
+				<action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
+			</intent-filter>
+			<meta-data
+				android:name="android.appwidget.provider"
+				android:resource="@xml/widget_info"/>
+		</receiver>
+
 	</application>
 </manifest>
