--- a/pocket-buddha/gradle.properties
+++ b/pocket-buddha/gradle.properties
@@ -17,6 +17,5 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 FEED_PAGER_END_POINT = "http://ec2-54-186-65-171.us-west-2.compute.amazonaws.com/app/pb/pager.php"
-LIST_SEARCH_END_POINT = "http://ec2-54-186-65-171.us-west-2.compute.amazonaws.com/app/pb/list.js"
-TEXT_SEARCH_END_POINT = "http://ec2-54-186-65-171.us-west-2.compute.amazonaws.com/app/pb/search.php"
+PALI_TERMS_END_POINT = "http://ec2-54-186-65-171.us-west-2.compute.amazonaws.com/app/pb/pali_terms.js"
 POCKET_BUDDHA_API_KEY = "U2FiYWthIE1hbmdhbCBIb3llIFJl";
