--- a/pocket-buddha/gradle.properties
+++ b/pocket-buddha/gradle.properties
@@ -16,6 +16,6 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-FEED_PAGER_END_POINT = "http://ec2-54-186-65-171.us-west-2.compute.amazonaws.com/app/pb/pager.php"
-PALI_TERMS_END_POINT = "http://ec2-54-186-65-171.us-west-2.compute.amazonaws.com/app/pb/pali_terms.js"
+FEED_PAGER_END_POINT = "http://rgr-myrg.github.io/www/data/pali_cannon.js"
+PALI_TERMS_END_POINT = "http://rgr-myrg.github.io/www/data/pali_terms.js"
 POCKET_BUDDHA_API_KEY = "U2FiYWthIE1hbmdhbCBIb3llIFJl";
