--- a/pocket-buddha/app/src/main/AndroidManifest.xml
+++ b/pocket-buddha/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
 			<!--android:value="@integer/google_play_services_version" />-->
 
 		<activity
-			android:name=".view.SplashScreenActivity"
+			android:name=".ui.SplashScreenActivity"
 			android:label="@string/app_name"
 			android:theme="@style/AppTheme.NoActionBar"
 			android:screenOrientation="portrait">
@@ -29,7 +29,7 @@
 		</activity>
 
 		<activity
-			android:name=".view.HomeActivity"
+			android:name=".ui.HomeActivity"
 			android:label="@string/app_name"
 			android:launchMode="singleTop"
 			android:theme="@style/AppTheme.NoActionBar">
@@ -40,7 +40,7 @@
 		</activity>
 
 		<activity
-			android:name=".view.AboutActivity"
+			android:name=".ui.AboutActivity"
 			android:label="@string/activity_about"
 			android:launchMode="singleTop"
 			android:theme="@style/AppTheme.NoActionBar">
@@ -51,7 +51,7 @@
 		</activity>
 
 		<activity
-			android:name=".view.DetailActivity"
+			android:name=".ui.DetailActivity"
 			android:label="@string/app_name"
 			android:launchMode="singleTop"
 			android:theme="@style/AppTheme.NoActionBar">
@@ -65,7 +65,7 @@
 		</activity>
 
 		<activity
-			android:name=".view.FavoritesActivity"
+			android:name=".ui.FavoritesActivity"
 			android:label="@string/activity_favorites"
 			android:launchMode="singleTop"
 			android:theme="@style/AppTheme.NoActionBar">
@@ -76,8 +76,8 @@
 		</activity>
 
 		<activity
-			android:name=".view.SearchResultActivity"
-			android:parentActivityName=".view.HomeActivity"
+			android:name=".ui.SearchResultActivity"
+			android:parentActivityName=".ui.HomeActivity"
 			android:label="@string/activity_search_results"
 			android:theme="@style/AppTheme.NoActionBar">
 			<!--<intent-filter>-->
@@ -106,7 +106,7 @@
 		<provider
 			android:authorities="net.usrlib.pocketbuddha.provider.word"
 			android:name=".provider.WordProvider"
-			android:exported="false"/>
+			android:exported="true"/>
 
 		<receiver
 			android:name=".widget.WidgetProvider"
