--- a/pocket-buddha/gradle.properties
+++ b/pocket-buddha/gradle.properties
@@ -19,3 +19,4 @@
 FEED_PAGER_END_POINT = "http://rgr-myrg.github.io/www/data/pali_cannon.js"
 PALI_TERMS_END_POINT = "http://rgr-myrg.github.io/www/data/pali_terms.js"
 POCKET_BUDDHA_API_KEY = "U2FiYWthIE1hbmdhbCBIb3llIFJl";
+GOOGLE_ANALYTICS_KEY = "UA-80227355-1";
