Created About and Credits Activities. Added Icons.

--- a/pocket-buddha/gradle.properties
+++ b/pocket-buddha/gradle.properties
@@ -20,3 +20,5 @@ FEED_PAGER_END_POINT = "http://rgr-myrg.github.io/www/data/pali_cannon.js"
 PALI_TERMS_END_POINT = "http://rgr-myrg.github.io/www/data/pali_terms.js"
 POCKET_BUDDHA_API_KEY = "U2FiYWthIE1hbmdhbCBIb3llIFJl";
 GOOGLE_ANALYTICS_KEY = "UA-80227355-1";
+POCKET_BUDDHA_ABOUT_URL = "http://rgr-myrg.github.io/www/html/pocket_buddha_about.html";
+POCKET_BUDDHA_CREDITS_URL = "http://rgr-myrg.github.io/www/html/pocket_buddha_credits.html";
