--- a/pocket-buddha/app/build.gradle
+++ b/pocket-buddha/app/build.gradle
@@ -4,6 +4,9 @@ def FEED_PAGER_END_POINT = FEED_PAGER_END_POINT
 def PALI_TERMS_END_POINT = PALI_TERMS_END_POINT
 def GOOGLE_ANALYTICS_KEY = GOOGLE_ANALYTICS_KEY
 def POCKET_BUDDHA_API_KEY = POCKET_BUDDHA_API_KEY
+def POCKET_BUDDHA_ABOUT_URL = POCKET_BUDDHA_ABOUT_URL;
+def POCKET_BUDDHA_CREDITS_URL = POCKET_BUDDHA_CREDITS_URL;
+
 
 android {
 	compileSdkVersion 23
@@ -17,8 +20,10 @@ android {
 		versionName "1.0"
 		buildConfigField "String", "FEED_PAGER_END_POINT", FEED_PAGER_END_POINT
 		buildConfigField "String", "PALI_TERMS_END_POINT", PALI_TERMS_END_POINT
-        buildConfigField "String", "GOOGLE_ANALYTICS_KEY", GOOGLE_ANALYTICS_KEY
-        buildConfigField "String", "POCKET_BUDDHA_API_KEY", POCKET_BUDDHA_API_KEY
+		buildConfigField "String", "GOOGLE_ANALYTICS_KEY", GOOGLE_ANALYTICS_KEY
+		buildConfigField "String", "POCKET_BUDDHA_API_KEY", POCKET_BUDDHA_API_KEY
+		buildConfigField "String", "POCKET_BUDDHA_ABOUT_URL", POCKET_BUDDHA_ABOUT_URL
+		buildConfigField "String", "POCKET_BUDDHA_CREDITS_URL", POCKET_BUDDHA_CREDITS_URL
 	}
 
 	buildTypes {
@@ -42,5 +47,5 @@ dependencies {
 	compile 'com.github.clans:fab:1.6.3'
 	compile 'com.chauthai.swipereveallayout:swipe-reveal-layout:1.2.0'
 	compile 'com.google.android.gms:play-services-analytics:9.2.0'
-	//compile 'com.google.firebase:firebase-ads:9.0.2'
+	compile 'com.google.android.gms:play-services-ads:9.2.0'
 }
