--- a/pocket-buddha/app/src/main/AndroidManifest.xml
+++ b/pocket-buddha/app/src/main/AndroidManifest.xml
@@ -6,16 +6,16 @@
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
 	<application
-        android:name=".util.TrackerUtil"
+		android:name=".util.TrackerUtil"
 		android:allowBackup="true"
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name"
 		android:supportsRtl="true"
 		android:theme="@style/AppTheme">
 
-		<!--<meta-data-->
-			<!--android:name="com.google.android.gms.version"-->
-			<!--android:value="@integer/google_play_services_version" />-->
+		<meta-data
+			android:name="com.google.android.gms.version"
+			android:value="@integer/google_play_services_version" />
 
 		<activity
 			android:name=".ui.SplashScreenActivity"
@@ -43,6 +43,17 @@
 		<activity
 			android:name=".ui.AboutActivity"
 			android:label="@string/activity_about"
+			android:launchMode="singleTop"
+			android:theme="@style/AppTheme.NoActionBar">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN"/>
+				<category android:name="android.intent.category.INFO"/>
+			</intent-filter>
+		</activity>
+
+		<activity
+			android:name=".ui.CreditsActivity"
+			android:label="@string/activity_credits"
 			android:launchMode="singleTop"
 			android:theme="@style/AppTheme.NoActionBar">
 			<intent-filter>
