--- a/pocket-buddha/app/build.gradle
+++ b/pocket-buddha/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
 	compile 'com.android.support:recyclerview-v7:23.4.0'
 	compile 'com.android.support:palette-v7:23.4.0'
 	compile 'net.usrlib:material-color:0.2'
+    compile 'net.usrlib:tinyevent:0.1'
 	compile 'com.github.bumptech.glide:glide:3.7.0'
 	compile 'com.github.clans:fab:1.6.3'
 	compile 'com.chauthai.swipereveallayout:swipe-reveal-layout:1.2.0'
