--- a/pocket-buddha/app/src/main/AndroidManifest.xml
+++ b/pocket-buddha/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="net.usrlib.pocketbuddha">
+	package="net.usrlib.pocketbuddha" >
 
-	<uses-permission android:name="android.permission.INTERNET"/>
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
 	<application
 		android:name=".util.TrackerUtil"
@@ -11,8 +11,7 @@
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name"
 		android:supportsRtl="true"
-		android:theme="@style/AppTheme">
-
+		android:theme="@style/AppTheme" >
 		<meta-data
 			android:name="com.google.android.gms.version"
 			android:value="@integer/google_play_services_version" />
@@ -20,119 +19,119 @@
 		<activity
 			android:name=".ui.SplashScreenActivity"
 			android:label="@string/app_name"
-			android:theme="@style/AppTheme.NoActionBar"
-			android:screenOrientation="portrait">
+			android:screenOrientation="portrait"
+			android:theme="@style/AppTheme.NoActionBar" >
 			<intent-filter>
-				<action android:name="android.intent.action.MAIN"/>
+				<action android:name="android.intent.action.MAIN" />
 
-				<category android:name="android.intent.category.LAUNCHER"/>
+				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-
 		<activity
 			android:name=".ui.HomeActivity"
 			android:label="@string/app_name"
 			android:launchMode="singleTop"
-			android:theme="@style/AppTheme.NoActionBar">
+			android:theme="@style/AppTheme.NoActionBar" >
 			<intent-filter>
-				<action android:name="android.intent.action.MAIN"/>
-				<category android:name="android.intent.category.INFO"/>
+				<action android:name="android.intent.action.MAIN" />
+
+				<category android:name="android.intent.category.INFO" />
 			</intent-filter>
 		</activity>
-
 		<activity
 			android:name=".ui.AboutActivity"
 			android:label="@string/activity_about"
 			android:launchMode="singleTop"
-			android:theme="@style/AppTheme.NoActionBar">
+			android:theme="@style/AppTheme.NoActionBar" >
 			<intent-filter>
-				<action android:name="android.intent.action.MAIN"/>
-				<category android:name="android.intent.category.INFO"/>
+				<action android:name="android.intent.action.MAIN" />
+
+				<category android:name="android.intent.category.INFO" />
 			</intent-filter>
 		</activity>
-
 		<activity
 			android:name=".ui.CreditsActivity"
 			android:label="@string/activity_credits"
 			android:launchMode="singleTop"
-			android:theme="@style/AppTheme.NoActionBar">
+			android:theme="@style/AppTheme.NoActionBar" >
 			<intent-filter>
-				<action android:name="android.intent.action.MAIN"/>
-				<category android:name="android.intent.category.INFO"/>
+				<action android:name="android.intent.action.MAIN" />
+
+				<category android:name="android.intent.category.INFO" />
 			</intent-filter>
 		</activity>
-
 		<activity
 			android:name=".ui.DetailActivity"
 			android:label="@string/app_name"
 			android:launchMode="singleTop"
-			android:theme="@style/AppTheme.NoActionBar">
+			android:theme="@style/AppTheme.NoActionBar" >
 			<intent-filter>
-				<action android:name="android.intent.action.SEARCH"/>
-				<category android:name="android.intent.category.INFO"/>
+				<action android:name="android.intent.action.SEARCH" />
+
+				<category android:name="android.intent.category.INFO" />
 			</intent-filter>
+
 			<meta-data
 				android:name="android.app.searchable"
-				android:resource="@xml/searchable"/>
+				android:resource="@xml/searchable" />
 		</activity>
-
 		<activity
 			android:name=".ui.FavoritesActivity"
 			android:label="@string/activity_favorites"
 			android:launchMode="singleTop"
-			android:theme="@style/AppTheme.NoActionBar">
+			android:theme="@style/AppTheme.NoActionBar" >
 			<intent-filter>
-				<action android:name="android.intent.action.MAIN"/>
-				<category android:name="android.intent.category.INFO"/>
+				<action android:name="android.intent.action.MAIN" />
+
+				<category android:name="android.intent.category.INFO" />
 			</intent-filter>
 		</activity>
-
 		<activity
 			android:name=".ui.SearchResultActivity"
-			android:parentActivityName=".ui.HomeActivity"
 			android:label="@string/activity_search_results"
-			android:theme="@style/AppTheme.NoActionBar">
-			<!--<intent-filter>-->
-				<!--<action android:name="android.intent.action.SEARCH"/>-->
-			<!--</intent-filter>-->
-			<!--<meta-data-->
-				<!--android:name="android.app.searchable"-->
-				<!--android:resource="@xml/searchable"/>-->
+			android:parentActivityName=".ui.HomeActivity"
+			android:theme="@style/AppTheme.NoActionBar" >
+
+			<!-- <intent-filter> -->
+			<!-- <action android:name="android.intent.action.SEARCH"/> -->
+			<!-- </intent-filter> -->
+			<!-- <meta-data -->
+			<!-- android:name="android.app.searchable" -->
+			<!-- android:resource="@xml/searchable"/> -->
 		</activity>
 
-		<service android:name=".service.FeedService"/>
+		<service android:name=".service.FeedService" />
 		<service
 			android:name=".widget.WidgetRemoteService"
 			android:permission="android.permission.BIND_REMOTEVIEWS" />
 
 		<provider
-			android:authorities="net.usrlib.pocketbuddha.provider"
 			android:name=".provider.FeedProvider"
-			android:exported="false"/>
-
+			android:authorities="net.usrlib.pocketbuddha.provider"
+			android:exported="false" />
 		<provider
-			android:authorities="net.usrlib.pocketbuddha.provider.search"
 			android:name=".provider.SearchProvider"
-			android:exported="false"/>
-
+			android:authorities="net.usrlib.pocketbuddha.provider.search"
+			android:exported="false" />
 		<provider
-			android:authorities="net.usrlib.pocketbuddha.provider.word"
 			android:name=".provider.WordProvider"
-			android:exported="true"/>
+			android:authorities="net.usrlib.pocketbuddha.provider.word"
+			android:exported="true" />
 
 		<receiver
 			android:name=".widget.WidgetProvider"
-			android:label="@string/widget_title">
+			android:label="@string/widget_title" >
 			<intent-filter>
-				<action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
+				<action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
 			</intent-filter>
+
 			<meta-data
 				android:name="android.appwidget.provider"
-				android:resource="@xml/widget_info"/>
+				android:resource="@xml/widget_info" />
 			<meta-data
 				android:name="LauncherMetadata.Requirements.Scrollable"
 				android:value="true" />
 		</receiver>
-
 	</application>
+
 </manifest>
