--- a/pocket-buddha/app/build.gradle
+++ b/pocket-buddha/app/build.gradle
@@ -7,53 +7,58 @@ def POCKET_BUDDHA_API_KEY = POCKET_BUDDHA_API_KEY
 def POCKET_BUDDHA_ABOUT_URL = POCKET_BUDDHA_ABOUT_URL;
 def POCKET_BUDDHA_CREDITS_URL = POCKET_BUDDHA_CREDITS_URL;
 
-
 android {
-    signingConfigs {
-        config {
-            keyAlias 'AndroidKey'
-            keyPassword 'rpm500'
-            storeFile file('/home/rgr-myrg/Development/KeyStore/android.jks')
-            storePassword 'rpm500'
-        }
-    }
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
-    defaultConfig {
-        applicationId "net.usrlib.pocketbuddha"
-        minSdkVersion 15
-        targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
-        buildConfigField "String", "FEED_PAGER_END_POINT", FEED_PAGER_END_POINT
-        buildConfigField "String", "PALI_TERMS_END_POINT", PALI_TERMS_END_POINT
-        buildConfigField "String", "GOOGLE_ANALYTICS_KEY", GOOGLE_ANALYTICS_KEY
-        buildConfigField "String", "POCKET_BUDDHA_API_KEY", POCKET_BUDDHA_API_KEY
-        buildConfigField "String", "POCKET_BUDDHA_ABOUT_URL", POCKET_BUDDHA_ABOUT_URL
-        buildConfigField "String", "POCKET_BUDDHA_CREDITS_URL", POCKET_BUDDHA_CREDITS_URL
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.config
-        }
-    }
+	signingConfigs {
+		if (rootProject.file('release.properties').exists()) {
+			def props = new Properties()
+			props.load(new FileInputStream(rootProject.file("release.properties")))
+			config {
+				keyAlias props.keyAlias
+				keyPassword props.keyPassword
+				storeFile file(props.storeFile)
+				storePassword props.storePassword
+			}
+		}
+	}
+	compileSdkVersion 23
+	buildToolsVersion "23.0.3"
+	defaultConfig {
+		applicationId "net.usrlib.pocketbuddha"
+		minSdkVersion 15
+		targetSdkVersion 23
+		versionCode 1
+		versionName "1.0"
+		buildConfigField "String", "FEED_PAGER_END_POINT", FEED_PAGER_END_POINT
+		buildConfigField "String", "PALI_TERMS_END_POINT", PALI_TERMS_END_POINT
+		buildConfigField "String", "GOOGLE_ANALYTICS_KEY", GOOGLE_ANALYTICS_KEY
+		buildConfigField "String", "POCKET_BUDDHA_API_KEY", POCKET_BUDDHA_API_KEY
+		buildConfigField "String", "POCKET_BUDDHA_ABOUT_URL", POCKET_BUDDHA_ABOUT_URL
+		buildConfigField "String", "POCKET_BUDDHA_CREDITS_URL", POCKET_BUDDHA_CREDITS_URL
+	}
+	buildTypes {
+		release {
+			minifyEnabled false
+			proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+			if (rootProject.file('release.properties').exists()) {
+				signingConfig signingConfigs.config
+			}
+		}
+	}
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:design:23.4.0'
-    compile 'com.android.support:cardview-v7:23.4.0'
-    compile 'com.android.support:recyclerview-v7:23.4.0'
-    compile 'com.android.support:palette-v7:23.4.0'
-    compile 'net.usrlib:material-color:0.2'
-    compile 'net.usrlib:tinyevent:0.1'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.github.clans:fab:1.6.3'
-    compile 'com.chauthai.swipereveallayout:swipe-reveal-layout:1.2.0'
-    compile 'com.google.android.gms:play-services-analytics:9.2.0'
-    compile 'com.google.android.gms:play-services-ads:9.2.0'
+	compile fileTree(include: ['*.jar'], dir: 'libs')
+	testCompile 'junit:junit:4.12'
+	compile 'com.android.support:appcompat-v7:23.4.0'
+	compile 'com.android.support:design:23.4.0'
+	compile 'com.android.support:cardview-v7:23.4.0'
+	compile 'com.android.support:recyclerview-v7:23.4.0'
+	compile 'com.android.support:palette-v7:23.4.0'
+	compile 'net.usrlib:material-color:0.2'
+	compile 'net.usrlib:tinyevent:0.1'
+	compile 'com.github.bumptech.glide:glide:3.7.0'
+	compile 'com.github.clans:fab:1.6.3'
+	compile 'com.chauthai.swipereveallayout:swipe-reveal-layout:1.2.0'
+	compile 'com.google.android.gms:play-services-analytics:9.2.0'
+	compile 'com.google.android.gms:play-services-ads:9.2.0'
 }
