--- a/pocket-buddha/app/build.gradle
+++ b/pocket-buddha/app/build.gradle
@@ -21,13 +21,16 @@ android {
 		}
 	}
 	compileSdkVersion 23
-	buildToolsVersion "23.0.3"
+	buildToolsVersion "24.0.0"
 	defaultConfig {
 		applicationId "net.usrlib.pocketbuddha"
 		minSdkVersion 15
 		targetSdkVersion 23
-		versionCode 1
-		versionName "1.0"
+		versionCode 2
+		versionName "1.1"
+		jackOptions {
+			enabled true
+		}
 		buildConfigField "String", "FEED_PAGER_END_POINT", FEED_PAGER_END_POINT
 		buildConfigField "String", "PALI_TERMS_END_POINT", PALI_TERMS_END_POINT
 		buildConfigField "String", "GOOGLE_ANALYTICS_KEY", GOOGLE_ANALYTICS_KEY
@@ -43,6 +46,10 @@ android {
 				signingConfig signingConfigs.config
 			}
 		}
+	}
+	compileOptions {
+		targetCompatibility 1.8
+		sourceCompatibility 1.8
 	}
 }
 
