--- a/pocket-buddha/app/src/main/AndroidManifest.xml
+++ b/pocket-buddha/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
 			android:name=".ui.SplashScreenActivity"
 			android:label="@string/app_name"
 			android:screenOrientation="portrait"
-			android:theme="@style/AppTheme.NoActionBar" >
+			android:theme="@style/AppTheme.SplashTheme" >
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 
@@ -32,33 +32,18 @@
 			android:label="@string/app_name"
 			android:launchMode="singleTop"
 			android:theme="@style/AppTheme.NoActionBar" >
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-
-				<category android:name="android.intent.category.INFO" />
-			</intent-filter>
 		</activity>
 		<activity
 			android:name=".ui.AboutActivity"
 			android:label="@string/activity_about"
 			android:launchMode="singleTop"
 			android:theme="@style/AppTheme.NoActionBar" >
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-
-				<category android:name="android.intent.category.INFO" />
-			</intent-filter>
 		</activity>
 		<activity
 			android:name=".ui.CreditsActivity"
 			android:label="@string/activity_credits"
 			android:launchMode="singleTop"
 			android:theme="@style/AppTheme.NoActionBar" >
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-
-				<category android:name="android.intent.category.INFO" />
-			</intent-filter>
 		</activity>
 		<activity
 			android:name=".ui.DetailActivity"
@@ -67,7 +52,6 @@
 			android:theme="@style/AppTheme.NoActionBar" >
 			<intent-filter>
 				<action android:name="android.intent.action.SEARCH" />
-
 				<category android:name="android.intent.category.INFO" />
 			</intent-filter>
 
@@ -80,24 +64,12 @@
 			android:label="@string/activity_favorites"
 			android:launchMode="singleTop"
 			android:theme="@style/AppTheme.NoActionBar" >
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-
-				<category android:name="android.intent.category.INFO" />
-			</intent-filter>
 		</activity>
 		<activity
 			android:name=".ui.SearchResultActivity"
 			android:label="@string/activity_search_results"
 			android:parentActivityName=".ui.HomeActivity"
 			android:theme="@style/AppTheme.NoActionBar" >
-
-			<!-- <intent-filter> -->
-			<!-- <action android:name="android.intent.action.SEARCH"/> -->
-			<!-- </intent-filter> -->
-			<!-- <meta-data -->
-			<!-- android:name="android.app.searchable" -->
-			<!-- android:resource="@xml/searchable"/> -->
 		</activity>
 
 		<service android:name=".service.FeedService" />
